[gd_scene load_steps=9 format=3 uid="uid://bnnudec7xiftc"]

[ext_resource type="Texture2D" uid="uid://dkqn7m2arkpq0" path="res://Ui/background.jpg" id="1_4gors"]
[ext_resource type="Script" path="res://Ui/Main Menu.gd" id="1_8dbbm"]
[ext_resource type="Texture2D" uid="uid://b5c5gnyhf2hxf" path="res://Ui/menu.jpg" id="2_5j16d"]
[ext_resource type="Texture2D" uid="uid://b7guy4wh5uqxj" path="res://Ui/background_text.png" id="4_875h0"]

[sub_resource type="GDScript" id="GDScript_n3au2"]

[sub_resource type="CSharpScript" id="CSharpScript_vnmhi"]
script/source = "using Godot;
using System;

public partial class BiomeMenu : OptionButton
{
	// Called when the node enters the scene tree for the first time.
	public override void _Ready()
	{
		
	}

	// Called every frame. 'delta' is the elapsed time since the previous frame.
	public override void _Process(double delta)
	{
		
	}
}
"

[sub_resource type="Animation" id="Animation_c67f0"]
resource_name = "FadeText"
length = 2.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1.1, 1.3, 1.5, 1.7, 2, 2.2, 2.4, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.617454, 0.617455, 0.617454, 1), Color(0.501406, 0.501407, 0.501406, 1), Color(0.641934, 0.641934, 0.641934, 1), Color(1, 1, 1, 1), Color(0.617454, 0.617455, 0.617454, 1), Color(0.501406, 0.501407, 0.501406, 1), Color(0.641934, 0.641934, 0.641934, 1), Color(1, 1, 1, 1), Color(0.617454, 0.617455, 0.617454, 1), Color(0.501406, 0.501407, 0.501406, 1), Color(0.641934, 0.641934, 0.641934, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btujb"]
_data = {
"FadeText": SubResource("Animation_c67f0")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8dbbm")
metadata/_edit_use_anchors_ = true

[node name="Background" type="Sprite2D" parent="Main Menu"]
position = Vector2(575, 327.25)
scale = Vector2(1.19792, 0.982759)
texture = ExtResource("1_4gors")

[node name="Menu" type="NinePatchRect" parent="Main Menu"]
visible = false
top_level = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -216.0
offset_right = 344.0
offset_bottom = 269.0
grow_vertical = 2
texture = ExtResource("2_5j16d")
script = SubResource("GDScript_n3au2")

[node name="Start" type="Button" parent="Main Menu/Menu"]
layout_mode = 2
offset_left = 45.0
offset_top = 72.0
offset_right = 285.0
offset_bottom = 103.0
text = "START
"

[node name="TextEdit" type="RichTextLabel" parent="Main Menu/Menu"]
layout_mode = 0
offset_left = 43.0
offset_top = 117.0
offset_right = 283.0
offset_bottom = 159.0
bbcode_enabled = true
text = "[center]Wizit population"

[node name="WizNumber" type="HSlider" parent="Main Menu/Menu"]
modulate = Color(0, 0.898039, 0.27451, 1)
layout_mode = 2
offset_left = 50.0
offset_top = 145.0
offset_right = 282.0
offset_bottom = 176.0
min_value = 30.0
max_value = 70.0
step = 2.0
value = 50.0
rounded = true

[node name="TextEdit2" type="RichTextLabel" parent="Main Menu/Menu"]
layout_mode = 0
offset_left = 43.0
offset_top = 178.0
offset_right = 283.0
offset_bottom = 220.0
bbcode_enabled = true
text = "[center]Mana scarcity"

[node name="Mana" type="HSlider" parent="Main Menu/Menu"]
modulate = Color(0.329764, 0.525037, 1, 1)
layout_mode = 0
offset_left = 51.0
offset_top = 202.0
offset_right = 283.0
offset_bottom = 233.0
min_value = 200.0
max_value = 1000.0
step = 50.0
value = 600.0
rounded = true

[node name="BiomeMenu" type="OptionButton" parent="Main Menu/Menu"]
modulate = Color(0, 1, 1, 1)
layout_mode = 2
offset_left = 43.0
offset_top = 250.0
offset_right = 287.0
offset_bottom = 292.0
theme_override_font_sizes/font_size = 0
item_count = 8
selected = 0
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Deserted World"
popup/item_1/id = 1
popup/item_2/text = "Fire And Ice"
popup/item_2/id = 2
popup/item_3/text = "Lush Fields"
popup/item_3/id = 3
popup/item_4/text = "Atlantis"
popup/item_4/id = 4
popup/item_5/text = "Siberia"
popup/item_5/id = 5
popup/item_6/text = "Contemporary"
popup/item_6/id = 6
popup/item_7/text = "Huge Biomes"
popup/item_7/id = 7
script = SubResource("CSharpScript_vnmhi")
popup/item_0/text = "Normal"
popup/item_0/icon = null
popup/item_0/id = 0
popup/item_0/disabled = false
popup/item_0/separator = false
popup/item_1/text = "Deserted World"
popup/item_1/icon = null
popup/item_1/id = 1
popup/item_1/disabled = false
popup/item_1/separator = false
popup/item_2/text = "Fire And Ice"
popup/item_2/icon = null
popup/item_2/id = 2
popup/item_2/disabled = false
popup/item_2/separator = false
popup/item_3/text = "Lush Fields"
popup/item_3/icon = null
popup/item_3/id = 3
popup/item_3/disabled = false
popup/item_3/separator = false
popup/item_4/text = "Atlantis"
popup/item_4/icon = null
popup/item_4/id = 4
popup/item_4/disabled = false
popup/item_4/separator = false
popup/item_5/text = "Siberia"
popup/item_5/icon = null
popup/item_5/id = 5
popup/item_5/disabled = false
popup/item_5/separator = false
popup/item_6/text = "Contemporary"
popup/item_6/icon = null
popup/item_6/id = 6
popup/item_6/disabled = false
popup/item_6/separator = false
popup/item_7/text = "Huge Biomes"

[node name="PressKey" type="NinePatchRect" parent="Main Menu"]
layout_mode = 1
offset_left = 418.0
offset_top = 324.0
offset_right = 684.0
offset_bottom = 395.0
texture = ExtResource("4_875h0")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Text" type="RichTextLabel" parent="Main Menu/PressKey"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -34.5
offset_right = 133.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "
[center]Press any key to start[center]
"
fit_content = true
tab_size = 8

[node name="TextFlash" type="AnimationPlayer" parent="Main Menu/PressKey/Text"]
libraries = {
"": SubResource("AnimationLibrary_btujb")
}

[connection signal="pressed" from="Main Menu/Menu/Start" to="Main Menu" method="_on_start_pressed"]
[connection signal="value_changed" from="Main Menu/Menu/WizNumber" to="Main Menu" method="_on_wiz_number_value_changed"]
[connection signal="value_changed" from="Main Menu/Menu/Mana" to="Main Menu" method="_on_mana_value_changed"]
[connection signal="item_selected" from="Main Menu/Menu/BiomeMenu" to="Main Menu" method="_on_biome_menu_item_selected"]
